# Recording-Meeting

./: .env.example  .gitignore  README.md  Setup_Startup.bat  pyproject.toml  script.sh  前端-會議紀錄.bat  後端-會議記錄.bat
OLD/: daemon.py
Script/: Intsallation.bat  Update.bat  script.sh  使用者介面-會議記錄.bat  後端伺服器-會議記錄.bat
app/: main.py  schemas.py
app/controllers/: dependencies.py  meeting_controller.py  qt_controller.py  task_controller.py
app/core/: config.py  database.py  exceptions.py  logger.py  scheduler.py
app/model/: enums.py
app/models/: __init__.py  enums.py  meeting.py  schemas.py  task.py
app/recorder/: monitor_service.py  obs_manager.py  recorder.py  utils.py  webex_manager.py  zoom_manager.py
app/services/: meeting_service.py  task_service.py
frontend/: UI.py  events.py
frontend/GUI/: config.py  events.py  main_window.py  style.qss
frontend/GUI/pages/: __init__.py  base_page.py  clock_layout.py  create_page.py  custom_widgets.py  meeting_page.py  page_config.py  query_pages.py  settings_page.py  status_page.py  task_page.py  utils.py
frontend/network/: api_client.py
frontend/services/: __init__.py  api_client.py  api_worker.py  meeting_service.py
shared/: config.py  log_config.yaml  logger.py
