[project]
name = "recording-meeting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.1",
    "fastapi>=0.124.4",
    "obsws-python>=1.8.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pyqt6>=6.10.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "pywin32>=308; sys_platform == 'win32'",
    "pyautogui>=0.9.54",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "black",
]

[dependency-groups]
dev = [
    "pynput>=1.8.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]
